--- a/index.html
+++ b/index.html
@@ -59,9 +59,21 @@
                 <span class="px-4 py-2 bg-orange-100 text-orange-700 rounded-full font-bold text-sm">✓ Xếp hạng</span>
             </div>
 
-            <!-- Hình ảnh minh họa (Trẻ em đang chạy) -->
-            <div class="mt-8 rounded-3xl overflow-hidden shadow-lg border-4 border-white">
-                <img src="https://images.unsplash.com/photo-1502086223501-87db9e9cc358?q=80&w=2070&auto=format&fit=crop" alt="Kids playing" class="w-full h-64 object-cover hover:scale-105 transition-transform duration-500">
+            <!-- Hình ảnh minh họa -->
+            <!-- HƯỚNG DẪN THAY ẢNH GOOGLE DRIVE:
+                 1. Lấy link chia sẻ ảnh (Share > Anyone with link).
+                 2. Lấy ID ảnh trong link (đoạn mã sau d/ và trước /view).
+                 3. Thay ID vào công thức: https://drive.google.com/uc?export=view&id=MÃ_ID_CỦA_BẠN
+                 4. Dán link vừa tạo vào phần src="" bên dưới.
+            -->
+            <div class="mt-8 rounded-3xl overflow-hidden shadow-lg border-4 border-white bg-gray-200">
+                <!-- Mặc định mình để ảnh giữ chỗ, bạn hãy thay link Drive vào src="..." nhé -->
+                <img 
+                    src="https://drive.google.com/uc?export=view&id=1dI7AMLa1SccA_OnNlazWIjjX0UAITfuT" 
+                    alt="Hình ảnh minh họa" 
+                    class="w-full h-64 object-cover hover:scale-105 transition-transform duration-500"
+                    onerror="this.src='https://placehold.co/600x400?text=Anh+Loi+Hoac+Chua+Co+Link'; this.style.objectFit='contain';"
+                >
             </div>
         </div>
 
