--- a/dashboard.html
+++ b/dashboard.html
@@ -3,14 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sảnh chính - Violympic</title>
+    <title>Sảnh chính - Toán thầy Choang Choang</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700;800&display=swap" rel="stylesheet">
+    <!-- Thêm font chữ cách điệu Pacifico -->
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
         body { font-family: 'Nunito', sans-serif; background-color: #FFF8F0; }
         .text-orange-custom { color: #FF6A00; }
         .bg-orange-custom { background-color: #FF6A00; }
+        /* Class riêng cho font chữ cách điệu */
+        .font-handwriting { font-family: 'Pacifico', cursive; }
     </style>
 </head>
 <body class="bg-gray-50">
@@ -20,9 +24,13 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex justify-between h-20 items-center">
                 <!-- Logo -->
-                <div class="flex items-center gap-2 cursor-pointer" onclick="window.location.href='dashboard.html'">
-                    <div class="w-10 h-10 bg-orange-custom rounded-lg flex items-center justify-center text-white font-bold text-xl">V</div>
-                    <span class="text-2xl font-bold text-gray-800">Violympic</span>
+                <div class="flex items-center gap-3 cursor-pointer" onclick="window.location.href='dashboard.html'">
+                    <!-- Đổi icon V thành icon Mũ cử nhân hoặc để T -->
+                    <div class="w-10 h-10 bg-orange-custom rounded-lg flex items-center justify-center text-white font-bold text-xl shadow-md">
+                        <i class="fa-solid fa-graduation-cap"></i>
+                    </div>
+                    <!-- Chữ cách điệu -->
+                    <span class="text-2xl md:text-3xl text-orange-600 font-handwriting pt-1">Toán thầy Choang Choang</span>
                 </div>
 
                 <!-- User Info & Logout -->
