--- a/index.html
+++ b/index.html
@@ -203,16 +203,18 @@
                 }, { merge: true });
 
                 showMessage(`Đăng nhập thành công! Chào ${user.email}`);
+                
+                // --- CHUYỂN TRANG SANG DASHBOARD ---
                 setTimeout(() => {
-                    alert(`Xin chào ${user.email}! Bạn đã đăng nhập thành công.`);
-                }, 500);
+                    window.location.href = "dashboard.html"; 
+                }, 1000); 
 
             } catch (error) {
                 console.error(error);
                 let msg = "Đăng nhập thất bại.";
                 if (error.code === 'auth/invalid-credential') msg = "Sai email hoặc mật khẩu!";
                 showMessage(msg, "error");
-            } finally {
+                // Reset nút bấm nếu lỗi
                 submitBtn.disabled = false;
                 submitBtn.innerHTML = 'Đăng nhập ngay';
             }
@@ -262,9 +264,10 @@
 
                 showMessage(`Chào mừng ${user.displayName}! Đăng nhập Google thành công.`);
                 
+                // --- CHUYỂN TRANG SANG DASHBOARD ---
                 setTimeout(() => {
-                    alert(`Xin chào ${user.displayName}! Bạn đã đăng nhập bằng Google thành công.`);
-                }, 500);
+                    window.location.href = "dashboard.html";
+                }, 1000);
 
             } catch (error) {
                 console.error("Lỗi Google Login:", error);
