--- a/index.html
+++ b/index.html
@@ -53,6 +53,13 @@
             <h2 class="text-3xl font-extrabold text-gray-800 mb-2">Đăng nhập</h2>
             <p class="text-gray-500 mb-6 text-sm">Chọn vai trò của bạn để tiếp tục</p>
 
+            <!-- PHẦN CHỌN VAI TRÒ (Đã cập nhật ID để xử lý logic) -->
+            <div class="bg-gray-100 p-1 rounded-xl flex mb-6">
+                <button type="button" id="roleStudent" class="flex-1 py-2 rounded-lg bg-orange-custom text-white font-bold shadow-md text-sm transition-all">Học sinh</button>
+                <button type="button" id="roleTeacher" class="flex-1 py-2 rounded-lg text-gray-500 font-semibold text-sm hover:bg-gray-200 transition-all">Giáo viên</button>
+                <button type="button" id="roleAdmin" class="flex-1 py-2 rounded-lg text-gray-500 font-semibold text-sm hover:bg-gray-200 transition-all">Admin</button>
+            </div>
+
             <form id="loginForm" class="space-y-5">
                 <div>
                     <label class="block text-sm font-bold text-gray-700 mb-2">Email đăng nhập</label>
@@ -115,28 +122,64 @@
         const googleLoginBtn = document.getElementById('googleLoginBtn');
         const messageArea = document.getElementById('messageArea');
 
+        // Các nút vai trò
+        const roleBtns = {
+            student: document.getElementById('roleStudent'),
+            teacher: document.getElementById('roleTeacher'),
+            admin: document.getElementById('roleAdmin')
+        };
+        let currentRole = 'student'; // Mặc định là học sinh
+
+        // === HÀM XỬ LÝ CHỌN VAI TRÒ ===
+        function setupRoleSelection() {
+            const activeClass = "bg-orange-custom text-white shadow-md".split(" ");
+            const inactiveClass = "text-gray-500 hover:bg-gray-200".split(" ");
+
+            function updateUI(selectedRole) {
+                currentRole = selectedRole;
+                // Reset tất cả về inactive
+                Object.values(roleBtns).forEach(btn => {
+                    btn.classList.remove(...activeClass);
+                    btn.classList.add(...inactiveClass);
+                });
+                // Set active cho nút được chọn
+                const activeBtn = roleBtns[selectedRole];
+                activeBtn.classList.remove(...inactiveClass);
+                activeBtn.classList.add(...activeClass);
+            }
+
+            roleBtns.student.addEventListener('click', () => updateUI('student'));
+            roleBtns.teacher.addEventListener('click', () => updateUI('teacher'));
+            roleBtns.admin.addEventListener('click', () => updateUI('admin'));
+        }
+        setupRoleSelection();
+
         function showMessage(msg, type = 'success') {
             messageArea.textContent = msg;
             messageArea.classList.remove('hidden', 'text-green-600', 'text-red-600');
             messageArea.classList.add(type === 'success' ? 'text-green-600' : 'text-red-600');
         }
 
-        // === HÀM CHUYỂN TRANG AN TOÀN ===
+        // === HÀM CHUYỂN TRANG ===
         function goToDashboard() {
             console.log("--> Đang thực hiện chuyển hướng đến dashboard.html...");
             submitBtn.innerHTML = '<i class="fa-solid fa-check"></i> Đang vào lớp...';
             window.location.href = "dashboard.html";
         }
 
+        // === LƯU THÔNG TIN USER (KÈM VAI TRÒ) ===
         async function saveUserData(user, method) {
             try {
-                setDoc(doc(db, "users", user.uid), {
+                // Lưu thêm trường 'role' vào Firestore
+                await setDoc(doc(db, "users", user.uid), {
                     email: user.email,
                     lastLogin: new Date().toISOString(),
                     authType: method,
+                    role: currentRole, // Lưu vai trò hiện tại (student/teacher/admin)
                     displayName: user.displayName || "",
                     photoURL: user.photoURL || ""
                 }, { merge: true });
+                console.log(`Đã lưu user với vai trò: ${currentRole}`);
             } catch (error) {
                 console.warn("Lỗi lưu DB:", error);
             }
@@ -153,7 +196,7 @@
 
             try {
                 const userCredential = await signInWithEmailAndPassword(auth, email, password);
-                showMessage("Đăng nhập thành công!", "success");
+                showMessage(`Đăng nhập thành công với vai trò: ${currentRole === 'student' ? 'Học sinh' : (currentRole === 'teacher' ? 'Giáo viên' : 'Admin')}!`, "success");
                 
                 saveUserData(userCredential.user, "email");
                 setTimeout(goToDashboard, 500);
@@ -179,8 +222,11 @@
             submitBtn.innerHTML = 'Đang đăng ký...';
 
             try {
-                await createUserWithEmailAndPassword(auth, email, password);
-                showMessage("Đăng ký thành công! Hãy đăng nhập.", "success");
+                const userCredential = await createUserWithEmailAndPassword(auth, email, password);
+                // Khi đăng ký mới, lưu vai trò đã chọn
+                saveUserData(userCredential.user, "email");
+                
+                showMessage("Đăng ký thành công! Hãy bấm đăng nhập.", "success");
             } catch (error) {
                 showMessage("Lỗi: " + error.message, "error");
             } finally {
