--- a/dashboard.html
+++ b/dashboard.html
@@ -72,7 +72,8 @@
                 <div class="w-14 h-14 bg-blue-100 text-blue-600 rounded-xl flex items-center justify-center text-2xl mb-4 group-hover:scale-110 transition-transform"><i class="fa-solid fa-calculator"></i></div>
                 <h3 class="text-xl font-bold text-gray-800 mb-2">Toán Học</h3>
                 <p class="text-gray-500 text-sm mb-4">Rèn luyện tư duy logic với các bài toán thú vị.</p>
-                <button class="w-full py-2 bg-gray-50 text-gray-700 font-bold rounded-lg group-hover:bg-blue-600 group-hover:text-white transition-colors">Vào thi ngay</button>
+                <!-- ĐÃ CẬP NHẬT LINK SANG TRANG THI -->
+                <button onclick="window.location.href='exam.html'" class="w-full py-2 bg-gray-50 text-gray-700 font-bold rounded-lg group-hover:bg-blue-600 group-hover:text-white transition-colors">Vào thi ngay</button>
             </div>
             <!-- Môn Tiếng Việt -->
             <div class="bg-white rounded-2xl shadow-md hover:shadow-xl transition-all p-6 group cursor-pointer border border-transparent hover:border-orange-200">
@@ -303,7 +304,7 @@
             }
 
             saveProfileBtn.disabled = true;
-            saveProfileBtn.textContent = '<i class="fa-solid fa-spinner fa-spin"></i> Đang lưu...';
+            saveProfileBtn.textContent = 'Đang lưu...';
             saveStatus.classList.add('hidden');
 
             try {
