--- a/dashboard.html
+++ b/dashboard.html
@@ -159,7 +159,8 @@
     <script type="module">
         import { initializeApp } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-app.js";
         import { getAuth, onAuthStateChanged, signOut, updateProfile } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-auth.js";
-        import { getFirestore, doc, getDoc, updateDoc } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-firestore.js";
+        // THAY ĐỔI Ở ĐÂY: Thêm setDoc vào danh sách import và dùng thay cho updateDoc
+        import { getFirestore, doc, getDoc, setDoc } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-firestore.js";
 
         // --- CẤU HÌNH (Sử dụng cấu hình từ ảnh bạn cung cấp) ---
         const firebaseConfig = {
@@ -308,12 +309,14 @@
             saveStatus.classList.add('hidden');
 
             try {
-                // Cập nhật Firestore
-                await updateDoc(doc(db, "users", currentUserUid), {
+                // Cập nhật Firestore - SỬA LỖI Ở ĐÂY
+                // Dùng setDoc với { merge: true } thay vì updateDoc
+                // Điều này giúp tự động tạo Document nếu nó chưa tồn tại (tránh lỗi No document to update)
+                await setDoc(doc(db, "users", currentUserUid), {
                     displayName: newName,
                     role: newRole,
                     birthDate: newBirth
-                });
+                }, { merge: true });
 
                 // Cập nhật Auth Profile (để đồng bộ ở những nơi khác)
                 if (auth.currentUser) {
