--- a/dashboard.html
+++ b/dashboard.html
@@ -117,12 +117,12 @@
                         <p class="text-gray-400 text-sm italic text-center py-4">Chưa có lớp học nào.</p>
                     </div>
                 </div>
-
-                <!-- Quản lý Đề thi -->
+                <!-- 2. Quản lý Đề thi -->
                 <div class="bg-white rounded-2xl shadow-sm p-6 border border-gray-100">
                     <div class="flex justify-between items-center mb-4">
                         <h3 class="text-xl font-bold text-gray-700"><i class="fa-solid fa-file-pen mr-2 text-green-500"></i>Ngân hàng Đề thi</h3>
-                        <button id="createExamBtn" class="px-3 py-1.5 bg-green-50 text-green-600 rounded-lg text-sm font-bold hover:bg-green-100 transition-colors">
+                        <!-- SỬA LINK Ở ĐÂY -->
+                        <button onclick="window.location.href='exam-editor.html'" class="px-3 py-1.5 bg-green-50 text-green-600 rounded-lg text-sm font-bold hover:bg-green-100 transition-colors">
                             + Soạn đề
                         </button>
                     </div>
