--- a/dashboard.html
+++ b/dashboard.html
@@ -598,16 +598,16 @@
                 grid.appendChild(div);
             });
 
-            currentExams.forEach(e => {
+            currentExams.forEach(exam => {
                 const div = document.createElement('div');
                 div.className = "explorer-item bg-white p-4 rounded-xl border border-gray-200 cursor-pointer relative group";
                 // Add Drag Events
                 div.draggable = true;
-                div.ondragstart = (e) => handleDragStart(e, e.id, 'exam');
+                div.ondragstart = (e) => handleDragStart(e, exam.id, 'exam');
                 
-                div.innerHTML = `<div class="text-4xl text-blue-500 mb-3 text-center"><i class="fa-regular fa-file-lines"></i></div><p class="text-sm font-bold text-gray-700 text-center truncate px-2" title="${e.title}">${e.title}</p><div class="absolute top-2 right-2 opacity-0 group-hover:opacity-100 transition-opacity"><button onclick="event.stopPropagation(); openContextMenu('${e.id}', 'exam', '${e.title}')" class="p-1 hover:bg-gray-100 rounded text-gray-500"><i class="fa-solid fa-ellipsis-vertical"></i></button></div>`;
+                div.innerHTML = `<div class="text-4xl text-blue-500 mb-3 text-center"><i class="fa-regular fa-file-lines"></i></div><p class="text-sm font-bold text-gray-700 text-center truncate px-2" title="${exam.title}">${exam.title}</p><div class="absolute top-2 right-2 opacity-0 group-hover:opacity-100 transition-opacity"><button onclick="event.stopPropagation(); openContextMenu('${exam.id}', 'exam', '${exam.title}')" class="p-1 hover:bg-gray-100 rounded text-gray-500"><i class="fa-solid fa-ellipsis-vertical"></i></button></div>`;
                 div.onclick = (e) => {
-                    if(!e.target.closest('button')) window.location.href = `exam-editor.html?id=${e.id}`;
+                    if(!e.target.closest('button')) window.location.href = `exam-editor.html?id=${exam.id}`;
                 };
                 grid.appendChild(div);
             });
