--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
 
             <form id="loginForm" class="space-y-5">
                 <div>
-                    <label class="block text-sm font-bold text-gray-700 mb-2">Tên đăng nhập / Email</label>
+                    <label class="block text-sm font-bold text-gray-700 mb-2">Tên đăng nhập</label>
                     <!-- Đã sửa placeholder để người dùng hiểu có thể nhập tên đăng nhập -->
-                    <input type="text" id="emailInput" placeholder="Ví dụ: phamdinhquang" required class="w-full px-4 py-3 rounded-xl border border-gray-200 bg-gray-50 text-gray-700 placeholder-gray-400 font-medium transition-colors">
+                    <input type="text" id="emailInput" placeholder="Nhập tên tài khoản (VD: phamdinhquang)" required class="w-full px-4 py-3 rounded-xl border border-gray-200 bg-gray-50 text-gray-700 placeholder-gray-400 font-medium transition-colors">
                 </div>
                 <div>
                     <label class="block text-sm font-bold text-gray-700 mb-2">Mật khẩu</label>
@@ -148,15 +148,19 @@
 
             if(!inputVal || !password) return showMessage("Vui lòng nhập đủ thông tin", "error");
 
-            // LOGIC THÔNG MINH: Nếu không có @, tự động coi là Username học sinh
+            // === LOGIC QUAN TRỌNG: TỰ ĐỘNG GHÉP ĐUÔI EMAIL ===
+            // Nếu học sinh chỉ nhập tên (vd: phamdinhquang) mà không có @
+            // Hệ thống sẽ tự biến nó thành: phamdinhquang@hocsinh.com
             if (!inputVal.includes('@')) {
-                inputVal = inputVal + "@hocsinh.com"; // Tự động ghép đuôi
+                inputVal = inputVal + "@hocsinh.com"; 
+                console.log("Đang đăng nhập với tài khoản tự động:", inputVal);
             }
 
             submitBtn.disabled = true;
             submitBtn.innerHTML = '<i class="fa-solid fa-spinner fa-spin"></i> Đang xử lý...';
 
             try {
+                // Gửi thông tin đã ghép đuôi lên Firebase
                 const userCredential = await signInWithEmailAndPassword(auth, inputVal, password);
                 showMessage("Đăng nhập thành công!", "success");
                 
