--- a/dashboard.html
+++ b/dashboard.html
@@ -232,8 +232,7 @@
             </div>
         </div>
 
-        <div class="flex-1 overflow-y-auto p-6 bg-gray-50">
-            <div id="tabContentStudents" class="space-y-6 max-w-6xl mx-auto">
+        <div class="flex-1 overflow-y-auto p-6 bg-gray-50 w-full"> <div id="tabContentStudents" class="space-y-6 w-full">
                 <div class="bg-white p-6 rounded-2xl border border-gray-200 shadow-sm">
                     <div class="flex justify-between items-center mb-4">
                         <h4 class="font-bold text-gray-800 text-sm uppercase flex items-center gap-2">
@@ -280,7 +279,7 @@
                 </div>
             </div>
 
-            <div id="tabContentExams" class="hidden space-y-6 max-w-6xl mx-auto">
+            <div id="tabContentExams" class="hidden space-y-6 w-full">
                 <div class="border rounded-2xl p-10 text-center bg-white border-dashed border-gray-300">
                     <div class="w-16 h-16 bg-blue-50 rounded-full flex items-center justify-center mx-auto mb-4 text-blue-500 text-2xl">
                         <i class="fa-solid fa-file-invoice"></i>
