--- a/exam-editor.html
+++ b/exam-editor.html
@@ -400,7 +400,7 @@
 
         window.saveExam = async function(status) {
             const title = document.getElementById('settingTitle').value;
-            if(!title) return alert("Vui lòng nhập tên đề thi!");
+            if(!title) return customAlert("Vui lòng nhập tên đề thi!", "error");
 
             // Xử lý logic chọn lớp
             const accessType = document.querySelector('input[name="settingAccess"]:checked').value;
@@ -488,7 +488,7 @@
                     modal.querySelector('div').classList.remove('scale-95');
                     modal.querySelector('div').classList.add('scale-100');
                 } else {
-                    alert("Đã lưu bản nháp thành công!");
+                    showToast("Đã lưu bản nháp thành công!", "success");
                 }
                 if (!window.location.search.includes('id=')) {
                     const newUrl = window.location.href.split('?')[0] + '?id=' + currentExamId;
@@ -553,7 +553,22 @@
             if (window.MathJax) MathJax.typesetPromise();
         }
 
-        function deleteQuestion(btn) { if(confirm("Xóa câu này?")) btn.closest('.question-card').remove(); }
+        // Phải thêm từ khóa async vì customConfirm trả về Promise
+window.deleteQuestion = async (btn) => { 
+    // Gọi Custom Confirm và đợi kết quả
+    if(await customConfirm("Bạn có chắc chắn muốn xóa câu hỏi này không?", "Xác nhận xóa")) {
+        // Hiệu ứng xóa mượt mà
+        const card = btn.closest('.question-card');
+        card.style.transition = "all 0.3s ease";
+        card.style.opacity = "0";
+        card.style.transform = "scale(0.9)";
+        
+        setTimeout(() => {
+            card.remove();
+            showToast("Đã xóa câu hỏi!", "success"); // Hiện thông báo nhỏ góc màn hình
+        }, 300);
+    }
+}
         function handleTexUpload(input) {
             const file = input.files[0]; if (!file) return;
             const reader = new FileReader();
