--- a/exam-editor.html
+++ b/exam-editor.html
@@ -70,9 +70,14 @@
         <div id="view-settings" class="flex-1 overflow-y-auto p-8 scroll-smooth">
             <div class="max-w-4xl mx-auto pb-10">
                 <div class="flex justify-between items-center mb-8 sticky top-0 bg-gray-50 py-2 z-10">
-                    <div>
-                        <h1 class="text-2xl font-bold text-gray-800">Cài đặt đề thi</h1>
-                        <p class="text-sm text-gray-500">Thiết lập thông tin, thời gian và bảo mật.</p>
+                    <div class="flex items-center gap-4">
+                        <button onclick="window.location.href='dashboard.html'" class="w-10 h-10 rounded-full bg-white border border-gray-200 hover:bg-gray-100 flex items-center justify-center text-gray-600 transition-colors shadow-sm group" title="Quay lại">
+                            <i class="fa-solid fa-arrow-left group-hover:-translate-x-1 transition-transform"></i>
+                        </button>
+                        <div>
+                            <h1 class="text-2xl font-bold text-gray-800">Cài đặt đề thi</h1>
+                            <p class="text-sm text-gray-500">Thiết lập thông tin, thời gian và bảo mật.</p>
+                        </div>
                     </div>
                     <div class="flex gap-3">
                         <button onclick="saveExam('draft')" id="btnSaveDraft" class="px-5 py-2.5 bg-white border border-gray-300 hover:bg-gray-50 text-gray-700 font-bold rounded-xl transition-all flex items-center gap-2 text-sm">
