--- a/dashboard.html
+++ b/dashboard.html
@@ -1198,5 +1198,12 @@ window.customAlert = (message, type = 'info') => {
 </div>
 
 <div id="toastContainer" class="fixed top-5 right-5 z-[110] flex flex-col gap-3"></div>
+    <div id="actionModal" class="modal opacity-0 pointer-events-none fixed inset-0 z-[80] flex items-center justify-center bg-gray-900 bg-opacity-50">
+    <div class="modal-container bg-white w-96 rounded-2xl shadow-2xl p-6 relative transform scale-95 transition-transform duration-300">
+        <h3 id="actionModalTitle" class="text-xl font-bold text-gray-800 mb-4">Hành động</h3>
+        <div id="dynamicContent"></div> 
+        <button onclick="window.toggleModal('actionModal', false)" class="absolute top-4 right-4 text-gray-400 hover:text-gray-600"><i class="fa-solid fa-times"></i></button>
+    </div>
+</div>
 </body>
 </html>
