--- a/dashboard.html
+++ b/dashboard.html
@@ -551,18 +551,22 @@
         }
 
         // Mở chi tiết lớp (Giáo viên)
+        // Hàm mở chi tiết lớp (Đã bỏ ẩn Sidebar)
         window.openTeacherClassDetail = async (id, name) => {
-            // Ẩn Sidebar để Full View
-            const sidebar = document.querySelector('aside');
-            if (sidebar) sidebar.classList.add('hidden');
-
+            // Chuyển view
             window.switchView('teacher-class-detail');
+            
+            // Đảm bảo Sidebar luôn hiện (đề phòng trường hợp nó đang bị ẩn)
+            const sidebar = document.querySelector('aside');
+            if (sidebar) sidebar.classList.remove('hidden');
+
             currentViewingClassId = id;
             
-            // Tìm đúng ID của tiêu đề lớp trong file cũ
-            const titleEl = document.getElementById('teacherClassTitle');
+            // Cập nhật tiêu đề (tìm đúng ID)
+            const titleEl = document.getElementById('teacherClassTitle') || document.getElementById('classModalTitle');
             if(titleEl) titleEl.textContent = name;
 
+            // Tải danh sách học sinh
             const snap = await getDoc(doc(db, "classes", id));
             if(snap.exists()) {
                 currentClassStudents = snap.data().students || [];
@@ -572,9 +576,9 @@
         }
 
         // Đóng chi tiết lớp (Hiện lại Sidebar)
+        // Hàm đóng chi tiết lớp
         window.closeClassDetail = () => {
-            const sidebar = document.querySelector('aside');
-            if (sidebar) sidebar.classList.remove('hidden');
+            // Chỉ cần chuyển view về danh sách lớp
             window.switchView('classes');
         }
 
