--- a/exam.html
+++ b/exam.html
@@ -13,7 +13,16 @@
       tex: {
         inlineMath: [['$', '$'], ['\\(', '\\)']],
         displayMath: [['$$', '$$'], ['\\[', '\\]']],
-        processEscapes: true
+        processEscapes: true,
+        // ĐỊNH NGHĨA CÁC LỆNH TOÁN VIỆT NAM
+        macros: {
+          heva: ["\\left\\{\\begin{matrix} #1 \\end{matrix}\\right.", 1],
+          hoac: ["\\left[\\begin{matrix} #1 \\end{matrix}\\right.", 1],
+          fun: ["\\mathit{#1}", 1], // Xử lý tên hàm
+          R: "\\mathbb{R}",
+          N: "\\mathbb{N}",
+          Z: "\\mathbb{Z}"
+        }
       },
       svg: { fontCache: 'global' },
       startup: { typeset: false }
