--- a/exam-editor.html
+++ b/exam-editor.html
@@ -14,7 +14,14 @@
       tex: {
         inlineMath: [['$', '$'], ['\\(', '\\)']],
         displayMath: [['$$', '$$'], ['\\[', '\\]']],
-        processEscapes: true
+        processEscapes: true,
+        // CẤU HÌNH MACRO CHO GIÁO VIÊN TOÁN VIỆT NAM
+        macros: {
+          heva: ["\\left\\{\\begin{matrix} #1 \\end{matrix}\\right.", 1],
+          hoac: ["\\left[\\begin{matrix} #1 \\end{matrix}\\right.", 1],
+          tich: "\\cdot",
+          deg: "^\\circ"
+        }
       },
       svg: { fontCache: 'global' }
     };
