--- a/dashboard.html
+++ b/dashboard.html
@@ -613,23 +613,37 @@
         function loadClasses() {
             const q = query(collection(db, "classes"), where("teacherId", "==", currentUserUid));
             onSnapshot(q, (snap) => {
-                const list = document.getElementById('classList'); list.innerHTML = '';
+                const list = document.getElementById('classList'); 
+                list.innerHTML = '';
                 snap.forEach(d => {
                     const cl = d.data();
                     const card = document.createElement('div');
                     card.className = "bg-white p-5 rounded-xl border border-gray-200 shadow-sm hover:shadow-md transition-shadow cursor-pointer relative group";
                     const words = cl.name.trim().split(/\s+/);
                     let acronym = words.length >= 2 ? (words[0][0] + words[1][0]).toUpperCase() : words[0].substring(0, 2).toUpperCase();
+                    
+                    // CẬP NHẬT: Gom nút Sửa và Xóa vào chung một khu vực góc phải (absolute)
+                    // Sử dụng flex gap-1 để chúng nằm cạnh nhau
                     card.innerHTML = `
-                        <div class="absolute top-3 right-3 opacity-0 group-hover:opacity-100 transition-opacity z-10">
+                        <div class="absolute top-3 right-3 opacity-0 group-hover:opacity-100 transition-opacity z-10 flex gap-1">
+                            <button onclick="event.stopPropagation(); window.openTeacherClassDetail('${d.id}', '${cl.name}')" class="p-2 text-gray-400 hover:text-blue-600 hover:bg-blue-50 rounded-full transition-colors" title="Chi tiết / Sửa">
+                                <i class="fa-solid fa-pen"></i>
+                            </button>
                             <button onclick="event.stopPropagation(); window.deleteClass('${d.id}')" class="p-2 text-red-400 hover:text-red-600 hover:bg-red-50 rounded-full transition-colors" title="Xóa lớp">
                                 <i class="fa-solid fa-trash"></i>
                             </button>
                         </div>
-                        <div class="flex justify-between items-start mb-2"><div class="w-10 h-10 rounded-lg bg-blue-100 text-blue-600 flex items-center justify-center font-bold text-lg">${acronym}</div><div class="opacity-0 group-hover:opacity-100 transition-opacity"><button class="text-gray-400 hover:text-blue-500 p-1"><i class="fa-solid fa-pen"></i></button></div></div><h3 class="font-bold text-gray-800 text-lg mb-1 truncate">${cl.name}</h3><p class="text-sm text-gray-500">${cl.studentCount || 0} học sinh</p>`;
+                        <div class="flex justify-between items-start mb-2">
+                            <div class="w-10 h-10 rounded-lg bg-blue-100 text-blue-600 flex items-center justify-center font-bold text-lg">${acronym}</div>
+                        </div>
+                        <h3 class="font-bold text-gray-800 text-lg mb-1 truncate">${cl.name}</h3>
+                        <p class="text-sm text-gray-500">${cl.studentCount || 0} học sinh</p>
+                    `;
                     card.onclick = () => window.openTeacherClassDetail(d.id, cl.name);
                     list.appendChild(card);
                 });
+                
+                // Nút tạo lớp mới (giữ nguyên)
                 const addCard = document.createElement('button');
                 addCard.className = "border-2 border-dashed border-gray-300 rounded-xl p-5 flex flex-col items-center justify-center text-gray-400 hover:border-blue-400 hover:text-blue-500 transition-colors h-full min-h-[140px]";
                 addCard.innerHTML = `<i class="fa-solid fa-plus text-3xl mb-2"></i><span class="font-bold">Tạo lớp mới</span>`;
