--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
             <div class="relative order-1 lg:order-2">
                 <div class="relative w-full aspect-square max-w-sm md:max-w-lg mx-auto">
-                    <img src="https://cdn3d.iconscout.com/3d/premium/thumb/maths-calculator-and-geometry-tools-5243884-4391283.png" alt="Math 3D" class="w-full h-full object-contain animate-float drop-shadow-2xl">
+                    <img src="https://drive.google.com/uc?export=view&id=1svtjD5yUgdriWj_KhBxn6_k4rn081gxa" alt="Math 3D" class="w-full h-full object-contain animate-float drop-shadow-2xl">
                 </div>
             </div>
         </div>
